# skyclaw

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SETUP_FOR_PROS.md  install.sh  skyclaw.toml  temm1e.toml
.claude/skills/: tem-release-protocol.md
.github/workflows/: ci.yml  release.yml
cores/: self-grow-auditor.md  self-grow-reviewer.md
crates/skyclaw-agent/src/: budget.rs  context.rs  history_pruning.rs  runtime.rs  task_decomposition.rs
crates/skyclaw-agent/tests/: runtime_integration.rs
crates/skyclaw-codex-oauth/src/: callback_server.rs  lib.rs
crates/skyclaw-gateway/src/: router.rs
crates/skyclaw-mcp/: Cargo.toml
crates/skyclaw-mcp/src/: bridge.rs  client.rs  config.rs  jsonrpc.rs  lib.rs  manager.rs  mcp_manage.rs  self_add.rs  self_extend.rs
crates/skyclaw-memory/src/: lib.rs  sqlite_usage.rs
crates/skyclaw-providers/src/: openai_compat.rs
crates/skyclaw-tools/src/: lib.rs  usage_audit.rs
crates/temm1e-agent/src/: agent_task_status.rs  consciousness_engine.rs  executor.rs  llm_classifier.rs  runtime.rs
crates/temm1e-channels/: Cargo.toml
crates/temm1e-channels/src/: lib.rs  telegram.rs  whatsapp.rs  whatsapp_common.rs  whatsapp_web.rs
crates/temm1e-codex-oauth/src/: responses_provider.rs
crates/temm1e-distill/src/: lib.rs
crates/temm1e-gaze/: Cargo.toml
crates/temm1e-gaze/src/: desktop_controller.rs  lib.rs  overlay.rs
crates/temm1e-gaze/src/platform/: mod.rs
crates/temm1e-hive/src/: queen.rs
crates/temm1e-hive/tests/: context_degradation_bench.rs  live_ab_bench.rs  project_bench.rs  project_bench_py.rs  project_bench_v2.rs
crates/temm1e-perpetuum/src/: conscience.rs  cortex.rs  self_work.rs
crates/temm1e-providers/src/: gemini.rs  lib.rs  openai_compat.rs
crates/temm1e-self-grow/: Cargo.toml
crates/temm1e-self-grow/src/: budget.rs  history.rs  lib.rs  pipeline.rs  sandbox.rs  trust.rs  zone_checker.rs
crates/temm1e-skills/src/: lib.rs
crates/temm1e-tools/: Cargo.toml
crates/temm1e-tools/src/: browser.rs  desktop_tool.rs  grounding.rs  lib.rs  prowl_blueprints.rs
crates/temm1e-tui/src/: agent_bridge.rs  app.rs  lib.rs
docs/: AGENTIC_CORE_V2_BENCHMARK_TOOLS.md  AGENTIC_CORE_V2_EXPERIMENT_INSIGHTS.md  AGENTIC_CORE_V2_RELEASE.md  PR_PROTOCOL.md  WHATSAPP_IMPLEMENTATION_PLAN.md  WHATSAPP_INTEGRATION.md  benchmark_v2_tools_v1_log.txt  benchmark_v2_tools_v2_log.txt
docs/design/: EXECUTABLE_DAG_REPORT.md  MISSION_CONTROL.md  TEM_GAZE_ARCHITECTURE.md  test1_parallel_off_output.txt  test2_parallel_on_output.txt
docs/dev/: getting-started.md
src/: main.rs
tems_lab/: README.md
tems_lab/consciousness/: ENHANCEMENT_OPTIONS.md  EXPERIMENT_REPORT_V2.md  RESEARCH_PAPER.md
tems_lab/eigen/: SETUP.md
tems_lab/gaze/: DESIGN.md  EXPERIMENT_REPORT.md  IMPLEMENTATION.md  PHASE1_REPORT.md  RESEARCH_PAPER.md
(+23 files in other folders)
