[package]
name = "temm1e-gaze"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tem Gaze — vision-primary desktop control for TEMM1E"

[dependencies]
temm1e-core.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Desktop control
enigo = { version = "0.3", features = ["serde"] }
xcap = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
